--- a/README.mediawiki
+++ b/README.mediawiki
@@ -2,6 +2,6 @@
 
 ==Rossum's Original Band of Tubas (R.O.B.O.T)==
 
-[[File:static/R.O.B.O.T.jpg|center|100px]]
+[[File:static/R.O.B.O.T.jpg|300px]]
 
 
