--- a/README.mediawiki
+++ b/README.mediawiki
@@ -7,4 +7,10 @@
 |[[Image:static/R.O.B.O.T.jpg|190px]]
 |}
 
+=== Dependencies ===
+* <a href="http://www.swig.org/">SWIG</a> Compiles C code and creates python wrapper
+* <a href="http://www.alsa.ma/">ALSA</a> Advanced Linux Sound Architecture - required for MIDI sequencer
+* <a href="https://github.com/vishnubob/python-midi">python-midi</a> - python library for processing midi
 
+python-midi requires alsa header files: install by 
+>sudo apt install libasound2-dev
