--- a/README.mediawiki
+++ b/README.mediawiki
@@ -3,9 +3,7 @@
 ==Rossum's Original Band of Tubas (R.O.B.O.T)==
 
 
-{| style="width:200px; border:5px solid blue;"
-|[[Image:bbam/static/R.O.B.O.T.jpg|190px]]
-|}
+[[Image:bbam/static/medium_robot.jpg]]
 
 === Dependencies ===
 * <a href="http://www.swig.org/">SWIG</a> Compiles C code and creates python wrapper
